--- a/vignettes/DUE_vignette.Rmd
+++ b/vignettes/DUE_vignette.Rmd
@@ -1,11 +1,16 @@
 ---
 title: "DUE, the Dose Utility Explorer"
 author: "Roger Day, Marie Gerges"
-date: "8/6/2017"
+date: "8/7/2017"
 output: html_document
 numbersections: TRUE
 ---
-
+<!-- rmarkdown::html_vignette -->
+<!-- vignette: > -->
+<!--   %\VignetteIndexEntry{Vignette Title} -->
+<!--   %\VignetteEngine{knitr::rmarkdown} -->
+<!--   %\VignetteEncoding{UTF-8} -->
+  
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
 ```
