Added Vignette title;  bumped version #.

--- a/inst/DUEshiny/www/DUE_vignette.Rmd
+++ b/inst/DUEshiny/www/DUE_vignette.Rmd
@@ -5,7 +5,7 @@ date: "8/7/2017"
 # output: html_document
 output: rmarkdown::html_vignette
 vignette: >
-  %\VignetteIndexEntry{Vignette Title}
+  %\VignetteIndexEntry{"DUE, the Dose Utility Explorer"}
   %\VignetteEngine{knitr::rmarkdown}
   %\VignetteEncoding{UTF-8}
 numbersections: TRUE
